# payment-service

./: .gitattributes  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  main.yml
payment_service/: alembic.ini  consumer.py  main.py  outbox_publisher.py  settings.py
payment_service/api/: models.py
payment_service/api/routers/: dependencies.py  payments.py
payment_service/db/: repository.py  schemas.py
payment_service/db/migrations/: env.py
payment_service/db/migrations/versions/: 20260326_0001_create_payments_and_outbox.py
tests/: conftest.py  test_api.py  test_consumer.py  test_models.py  test_outbox_publisher.py  test_repository.py
