[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "payment-service"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{ include = "payment_service" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.115.6"
uvicorn = {version = "0.32.1", extras = ["standard"]}
pydantic = "2.10.3"
pydantic-settings = "2.6.1"
sqlalchemy = "2.0.36"
asyncpg = "0.30.0"
alembic = "1.14.0"
faststream = {version = "0.5.35", extras = ["rabbit"]}
aio-pika = "9.5.2"
httpx = "0.28.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9"
pytest = "^8.0"
pytest-asyncio = "^0.25"

[tool.pytest.ini_options]
asyncio_mode = 'auto'
testpaths = ['tests']

[tool.ruff]
output-format = "full"
target-version = "py39"
line-length = 120

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true
skip-magic-trailing-comma = false

[tool.ruff.lint]
dummy-variable-rgx = "^unused_.+$"
ignore = [
    "A001",
    "A003",
    "ANN001",
    "ANN002",
    "ANN003",
    "ANN201",
    "ANN202",
    "ANN205",
    "ANN401",
    "ARG001",
    "ARG002",
    "ASYNC100",
    "B005",
    "B007",
    "B008",
    "B904",
    "BLE001",
    "C901",
    "COM812",
    "DTZ005",
    "DTZ006",
    "E501",
    "EM101",
    "EM102",
    "F811",
    "F821",
    "G002",
    "INP001",
    "ISC001",
    "N805",
    "N818",
    "PERF203",
    "PIE804",
    "PIE808",
    "PLE1206",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLR1714",
    "PLR2004",
    "PLR5501",
    "PLW1510",
    "PT013",
    "PTH112",
    "PTH113",
    "PTH118",
    "PTH123",
    "PTH202",
    "PTH204",
    "PYI024",
    "PYI036",
    "PYI041",
    "PYI058",
    "RET505",
    "RUF001",
    "RUF002",
    "RUF003",
    "RUF012",
    "RUF015",
    "RUF100",
    "S101",
    "S103",
    "S202",
    "S310",
    "S603",
    "S607",
    "S608",
    "SIM108",
    "SIM910",
    "SLF001",
    "TRY002",
    "TRY003",
    "TRY004",
    "TRY301",
    "TRY400",
    "UP031",
    "UP032",
    "UP037",
]
select = [
    "F",
    "E",
    "W",
    "C90",
    "I",
    "N",
    "UP",
    "ANN",
    "ASYNC",
    "S",
    "BLE",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "EM",
    "EXE",
    "ISC",
    "ICN",
    "G",
    "INP",
    "PIE",
    "T20",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SLOT",
    "SIM",
    "TID",
    "INT",
    "ARG",
    "PTH",
    "FIX001",
    "ERA",
    "PGH",
    "PL",
    "TRY",
    "FLY",
    "RUF",
]

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true
suppress-none-returning = true

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.pylint]
max-args = 10
max-returns = 7
